--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <title>Test</title>
 
     <!-- Bootstrap -->
@@ -20,7 +20,30 @@
 
   </head>
   <body>
+    <div class="container-fluid">
+      <div class="container">
+        <div class="col-md-6 col-xs-6">
+          <h3 id=" ">Todo list</h3>
+          <h4><span>0 of 0</span> remaining [ <a href="#">forget</a> ]</h4>
+          <ul class="list-unstyled">
+          </ul>
+          <div class="form-group form-inline">
+            <input type="text" class="form-control" id="addinput" placeholder="add what we want to do.">
+            <a href="#" class="btn btn-default" id="addtodo">Add</a>
+          </div>
+        </div>
 
+        <div class="col-md-6 col-xs-6">
+          <table class="table">
+            <tr>
+              <td>Задание</td>
+              <td>Когда закончено</td>
+            </tr>
+          </table>
+        </div>
+
+      </div>
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
